@@ -393,7 +393,7 @@ ys_parse_index (GList **index)
 					   GNOME_VFS_FILE_INFO_DEFAULT);
 
 	if (result != GNOME_VFS_OK) {
-		g_warning ("Error opening directory: %s\n", index_dir);
+		g_warning ("Error opening index directory: %s\n", index_dir);
 		return FALSE;
 	}
 
